--- a/StorhaugenWebsite/Pages/AddFood.razor
+++ b/StorhaugenWebsite/Pages/AddFood.razor
@@ -63,7 +63,7 @@ else
             <p class="form-section-title">Måltidsdetaljer</p>
             @if (_isHelloFresh)
             {
-                <MudChip Size="Size.Small" Color="Color.Success" Variant="Variant.Text" Icon="@Icons.Material.Rounded.AutoAwesome">
+                <MudChip Size="Size.Small" Color="Color.Success" T=string Variant="Variant.Text" Icon="@Icons.Material.Rounded.AutoAwesome">
                     Autofyll aktiv
                 </MudChip>
             }
