--- a/StorhaugenWebsite/Pages/AddFood.razor
+++ b/StorhaugenWebsite/Pages/AddFood.razor
@@ -139,7 +139,7 @@ else
             <MudFileUpload T="IReadOnlyList<IBrowserFile>"
                            @ref="@_galleryUpload"
                            FilesChanged="OnImagesSelected"
-                           Accept=".png,.jpg,.jpeg,.webp,image/*"
+                           Accept="image/*"
                            MaximumFileCount="5"
                            Class="flex-1">
                 <ActivatorContent>
